Olympus/src/objects/HSFE_Territory_To_User__c.object
<CustomObject>
    <fields>
        <fullName>HSFE_Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>HSEF_Territory__c</referenceTo>
        <relationshipLabel>Territory To User</relationshipLabel>
        <relationshipName>Territory_To_User</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HSFE_User_Role__c</fullName>
        <formula>HSFE_User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_To_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory To User</label>
    <nameField>
        <displayFormat>U-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory To User</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>